updating API documenation for the Node normalization deployment
